Fixed issue with invisible control picker

--- a/style/assets/picker-control.scss
+++ b/style/assets/picker-control.scss
@@ -8,6 +8,10 @@
     position: absolute;
     transition: transform 0.3s, opacity 0.3s;
 
+    &-placeholder {
+        position: relative;
+    }
+
     &_hidden {
         transform: translateX(-30px);
         opacity: 0;
